updated that file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body class="bg-zinc-900 text-zinc-100 font-sans min-h-screen">
 
   <header class="text-center py-8">
-    <h1 class="text-4xl font-extrabold tracking-tight">BIRSUSPS DEMONSLIST</h1>
-    <p class="text-zinc-400 text-sm mt-1">Geometry Dash hardest levels ranked by Birsusp</p>
+    <h1 class="text-4xl font-extrabold tracking-tight">BIRSUSPS DEMONLIST</h1>
+    <p class="text-zinc-400 text-sm mt-1">The official demonlist for BirsusPS (2.2)</p>
   </header>
 
   <main id="list" class="max-w-2xl mx-auto px-4 pb-16 space-y-6">
@@ -19,7 +19,7 @@
   </main>
 
   <footer class="text-center text-zinc-600 text-xs pb-6">
-    © 2025 Birsusp Demonlist • Made by aaa
+    © 2025 Birsusp Demonlist • Made by MartoGG
   </footer>
 
   <script>
@@ -80,3 +80,4 @@
   </script>
 </body>
 </html>
+
